--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  background-color: #4a4a4a;
+  background-color: #e1e1e1;
+  color: black;
 }
 button:focus,
 button:focus-visible {
